2014-02-23  Per Bothner  <per@bothner.com>

	* threadring.scm (m): New variable, from command-line.
	(MAX_NODES, MAX_THREADS): Initialize from m.
	* Makefile.am: Call threadring with m=103, instead of default 503,
	which tends to run out the thread stack memory.

2014-02-19  Per Bothner  <per@bothner.com>

	* num-test.scm (logop-compare): Use bitwise-bit-set? instead of
	logbit? which had non-standard argument order.

2014-02-17  Per Bothner  <per@bothner.com>

	* exit1.scm: New test of 'exit'.
	* exit2.scm: New test of 'emergency-exit'.
	* Makefile.am (SCRIPTS_TO_RUN): Update accordingly.

2014-02-08  Per Bothner  <per@bothner.com>

	* r7rs-tests.scm: A file-error? test is no longer expected to fail.

2014-02-06  Per Bothner  <per@bothner.com>

	* misc-test.scm: Update for change of NamedLocation#setWithSave.

2014-01-27  Per Bothner  <per@bothner.com>

	* system-test.scm: Add tests of final-newline-removal.

2014-01-08  Per Bothner  <per@bothner.com>

	* r7rs-tests.scm: Add nested guard-in-guard test.

2014-01-05  Per Bothner  <per@bothner.com>

	* Makefile.am (EXTRA_DIST): Belatedly add system-test.scm.

2014-01-04  Per Bothner  <per@bothner.com>

	* r7rs-tests.scm: Re-order and update to match upstream Chibi.

2013-12-30  Per Bothner  <per@bothner.com>

	* system-test.scm: Some tests of reading or writing from/to ports.
	Needed to add a sleep now that this is done using a thread.

2013-12-29  Per Bothner  <per@bothner.com>

	* inlining.expected: Update after better code-egenation for 'eq?'.

2013-12-26  Per Bothner  <per@bothner.com>

	* system-test.scm:  Add tests for redirection to output port.

2013-12-25  Per Bothner  <per@bothner.com>

	* system-test.scm: More tests, some re-factoring.

2013-12-22  Per Bothner  <per@bothner.com>

	* system-test.scm: Test process-related and system-related
	functionality.
	* Makefile.am: Update accordingly.

2013-12-13  Per Bothner  <per@bothner.com>

	* r7rs-tests.scm: Enable tests for exception-handling.