@@ -1,5 +1,7 @@
 2014-02-23  Per Bothner  <per@bothner.com>
 
+	* r7rs-tests.scm: Make more robust for Windows line endings.
+
 	* threadring.scm (m): New variable, from command-line.
 	(MAX_NODES, MAX_THREADS): Initialize from m.
 	* Makefile.am: Call threadring with m=103, instead of default 503,
